endpoint for get a single Ride
